# capybara

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: docker.yml  rust-publish.yml  rust.yml
capybara/: Cargo.toml
capybara-bin/: Cargo.toml
capybara-bin/src/: main.rs
capybara-bin/src/bootstrap/: config.rs  runtime.rs
capybara-bin/src/cmd/: run.rs
capybara-core/: Cargo.toml  README.md
capybara-core/examples/: httpbin.rs  https.rs  localhost.cert.pem  localhost.key.pem  lua.rs
capybara-core/src/: builtin.rs  error.rs  lib.rs  logger.rs  macros.rs  proto.rs
capybara-core/src/pipeline/: misc.rs  mod.rs
capybara-core/src/pipeline/http/: mod.rs  noop.rs  pipeline.rs  pipeline_access_log.rs  pipeline_acme.rs  pipeline_lua.rs  pipeline_router.rs  registry.rs
capybara-core/src/pipeline/stream/: mod.rs  pipeline.rs  pipeline_router.rs  registry.rs
capybara-core/src/protocol/: mod.rs
capybara-core/src/protocol/grpc/: mod.rs
capybara-core/src/protocol/http/: codec.rs  httpfield.rs  misc.rs  mod.rs  response.rs
capybara-core/src/protocol/http/frame/: body.rs  chunked.rs  header.rs  mod.rs  query.rs  request_line.rs  status_line.rs
capybara-core/src/protocol/http/listener/: 408.html  500.html  502.html  504.html  listener.rs  mod.rs
capybara-core/src/protocol/http2/: codec.rs  frame.rs  hpack.rs  mod.rs
capybara-core/src/protocol/http2/huffman/: NOTICE.txt  mod.rs
capybara-core/src/protocol/http2/listener/: listener.rs  mod.rs
capybara-core/src/protocol/http3/: mod.rs
capybara-core/src/protocol/stream/: mod.rs
capybara-core/src/resolver/: dns.rs  mod.rs
capybara-core/src/transport/: mod.rs
capybara-core/src/transport/tcp/: misc.rs  mod.rs  pool.rs
capybara-core/src/transport/tls/: mod.rs  pool.rs  tls.rs
capybara-core/src/upstream/: misc.rs  mod.rs  pools.rs  round_robin.rs  upstreams.rs  weighted.rs
capybara-etc/: Cargo.toml  README.md
capybara-etc/src/: config.rs  lib.rs
capybara-util/: Cargo.toml  README.md  build.rs
capybara-util/src/: lib.rs  weighted.rs
capybara-util/src/ip/: ifaddrs.rs  mod.rs
capybara/src/: config.rs  main.rs
capybara/src/bootstrap/: mod.rs  runtime.rs
capybara/src/cmd/: mod.rs  run.rs
capybara/src/provider/: mod.rs  static_file.rs
scripts/: bump-version.sh
testdata/: capybara.docker.yaml  capybara.https.yaml  capybara.yaml  config.https.yaml  config.yaml
