[package]
name = "capybara-core"
version = "0.0.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
string_cache_codegen = "0.5"

[dev-dependencies]
pretty_env_logger = "0.5.0"
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
mimalloc = { version = "0.1", default-features = false }

[dependencies]
capybara-util = { path = "../capybara-util" }
log = "0.4"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.7.0"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
bytes = "1"
once_cell = "1"
async-trait = "0.1"
futures = "0.3"
thiserror = "1"
anyhow = "1"
cfg-if = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
uuid = { version = "1.4", features = ["v4", "fast-rng"] }
rand = "0.8"
smallvec = { version = "1.11", features = ["write"] }
chrono = "0.4"
regex = "1.9"
dashmap = "5.5"
base64 = "0.22"
roaring = "0.10"
urlencoding = "2.1"
md5 = "0.7"
ahash = "0.8"
parking_lot = "0.12"
flate2 = "1.0"
brotli = "3.4"
crc32c = "0.6"
string_cache = "0.8"
strum = { version = "0.26", default-features = false, features = ["strum_macros", "derive"] }
strum_macros = "0.26"
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"
webpki-roots = "0.25"
webpki = { package = "rustls-webpki", version = "0.101", features = ["alloc", "std"] }
nonzero_ext = "0.3"
glob = "0.3"
memchr = "2.7"
small-map = "0.1"
hashbrown = { version = "0.14", features = ["serde"] }
arc-swap = "1.7"
duration-str = "0.11"
deadpool = { version = "0.12", features = ["rt_tokio_1"] }
bitflags = "2.4"
zstd = "0.13"
coarsetime = "0.1"
hickory-resolver = "0.24"
rustc-hash = { version = "2.0", default-features = false }
moka = { version = "0.12", features = ["future", "sync"] }
serde_yaml = "0.9"
mlua = { version = "0.9", features = ["luajit", "vendored", "serialize", "async", "macros", "send", "parking_lot"] }

[[example]]
name = "httpbin"
path = "examples/httpbin.rs"

[[example]]
name = "https"
path = "examples/https.rs"
