[package]
name = "capybara-etc"
version = "0.0.1-alpha.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jjeffcaii/capybara"
homepage = "https://github.com/jjeffcaii/capybara"
description = "A reverse proxy in Rust, which is inspired from Nginx/OpenResty/Envoy."
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dev-dependencies]
pretty_env_logger = "0.5.0"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
