[package]
name = "capybara-util"
version = "0.0.1-alpha.2"
edition = "2021"
build = "build.rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jjeffcaii/capybara"
homepage = "https://github.com/jjeffcaii/capybara"
description = "A reverse proxy in Rust, which is inspired from Nginx/OpenResty/Envoy."
include = [
    "**/*.rs",
    "Cargo.toml",
]

[build-dependencies]
string_cache_codegen = "0.5"

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.5"

[dependencies]
once_cell = "1"
foreign-types = "0.5"
libc = "0.2"
anyhow = "1"
rand = "0.8"
string_cache = "0.8"
