[package]
name = "capybara"
version = "0.0.1-alpha+1"
edition = "2021"

[dev-dependencies]
pretty_env_logger = "0.5.0"

[dependencies]
capybara-core = { path = "../capybara-core" }
capybara-etc = { path = "../capybara-etc" }
capybara-util = { path = "../capybara-util" }
mimalloc = { version = "0.1.42", default-features = false }
log = "0.4.21"
anyhow = "1.0.86"
cfg-if = "1.0.0"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
serde_json = "1.0.117"
serde_yaml = "0.9.27"
once_cell = "1.19.0"
async-trait = "0.1.74"
ahash = "0.8.11"
pretty_env_logger = "0.5.0"
dirs = "5.0.1"
hashbrown = { version = "0.14.5", features = ["serde"] }
duration-str = "0.11.2"
liquid = "0.26.9"
